2001-12-03 Stefan Petersen (spe@stacken.kth.se)

	* src/drill.h, src/gerber.h, src/gerbv.c:
	  Fixed bug caused by last minute namechange of 
	  gerb_file.[hc].
	* src/gerb_file.[hc]: Added functions gerb_fgetint and
	  gerb_fgetdouble.
	* src/drill.c, src/gerber.c: Utilize the new file read
	  functions.
	
	
2001-12-02 Stefan Petersen (spe@stacken.kth.se)

	* src/gerb_file.[hc], src/drill.[hc], src/gerber.[hc], gerbv.c:
	  Changed method of file IO from fgetc to mmap. Speed increase 
	  up to 3 times noted (loading all of jj's file at ones).

	
2001-12-02 Stefan Petersen (spe@stacken.kth.se)

	* src/drill.c: drill_file_p recoded so it seems to work better.
	* src/gerbv.c: Removed and cleaned up "open file" code.
	* src/gerbv.c, src/color.c, src/color.h: Fixed the whole mess
	  with colors. Now colors doesn't set any limits on how many files
	  you can load. It also checks that you don't give too many files
	  to the program.
	

2001-12-02 Andreas Andersson (e92_aan@e.kth.se)

	* src/gerbv.c:
	  Changed radiobuttons to togglebuttons, redraw_pixmap() now shows
	  all switched on images. Slight changes to the zoom/translate code
	  (it still doesn't work as intended, though). Added mouse commmands
	  for zooming without scrollwheel. screen.scale no longer goes down
	  to 0 when zooming out.
	* src/draw.h, src/draw.c:
	  Floating point calculations that are converted to ints for
	  display are now rounded to the nearest int rather than always
	  truncated down (or was it up?) Macro round(x) added to make that
	  prettier. Removed minor stuff that caused warnings with -Wall
	  flag to gcc.


2001-11-27 Andreas Andersson (e92_aan@e.kth.se)

	* src/gerbv.c:
	  Added autodetection of file type.
	* src/drill.c:
	  Corrected stupid bug in autodetection.


2001-11-27 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.h, src/drill.c:
	  Added drill_file_p(); which checks whether a file could
	  be a drill file or not.


2001-11-26 Stefan Petersen (spe@stacken.kth.se)
