@@ -21,6 +21,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA
  */
 
+#include <stdlib.h>
 #include <stdio.h>
 #include <gtk/gtk.h>
 #include <gdk/gdk.h>
